# xarray-sql

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  MANIFEST.in  README.md  catalog.py  catalog_test.py  create_test_datasets.py  create_test_zarr.py  mkdocs.yml  performance_comparison.py  pixi.toml  pyproject.toml  requirements_docs.txt  setup.py  xarray_context.py  zensical.toml
.github/workflows/: ci-build.yml  ci-maturin.yaml  ci-python.yml  ci-rust.yml  ci.yml  docs.yml  docs_build.yml  lint-python.yml  lint-rust.yml  lint.yml  publish.yml
benchmarks/: README.md  grad_descent.py  grad_era5.py  mnist_mlp.py
benchmarks/geospatial/: 01_ndvi.py  02_climatology.py  03_zonal_mean.py  04_anomaly.py  05_forecast_skill.py  06_zonal_vector.py  07_reproject_udf.py  08_regrid_weights.py  09_lazy_roundtrip.py  09_warp.py  10_tem.py  README.md  _era5.py  _harness.py  perf_summary.py  run_all.sh  run_perf.sh
demo/: mara_join.py  sst  sst.py
design/197-grad-in-query/: README.md  datafusion-54-migration.md  datafusion-ffi-simplify.patch  datafusion-python-fork.md  datafusion-python-fork.patch  fork-sync.md
docs/: contributing.md  core.md  df.md  df_integrationtest.md  df_test.md  examples.md  geospatial.md  index.md  installation.md  sql.md  sql_test.md  usage.md
docs/reference/: xarray_sql.md
examples/: create_test_datasets.py  create_test_zarr.py  mara_join.py  sql_integration_tests.rs  test_dimensional_joins.rs  test_error_handling.rs  test_predicate_pushdown.rs  test_real_zarr.rs  validate_output.rs
perf_tests/: README.md  compute_air.py  era5_temp_profile.py  groupby_air.py  groupby_air_full.py  open_era5.py  profile.sh  registration_scaling.py  sanity.py
qarray/: __init__.py  core.py  core_test.py  dask.py  dask_test.py  db.py  df.py  df_integration_test.py  df_test.py  integration_test.py  sql.py  sql_test.py
src/: autograd.rs  core.py  lib.rs  table_provider.rs
tests/: conftest.py  core_test.py  df_integrationtest.py  df_test.py  sql_test.py  test_adapter.py  test_autograd.py  test_cft.py  test_coalesce.py  test_df.py  test_ds.py  test_filtering.py  test_native.py  test_reader.py  test_sql.py  test_stats.py  test_to_dataset_perf.py
xarray_sql/: __init__.py  cft.py  cft_test.py  cftime.py  column_filter_test.py  core.py  demo_adapter.py  df.py  df_cy.py  df_integrationtest.py  df_test.py  ds.py  expression_filter.py  native.py  reader.py  reader_test.py  repl.py  sql.py  sql_test.py
xarray_sql/dataframe_protocol/: __init__.py  accessor.py  core.py
