[package]
name = "xarray_sql"
version = "0.3.0"
authors = ["Alex Merose"]
edition = "2021"
exclude = [
    "perf_tests/*",
    "demo/*",
    ".github/*",
    ".idea/*",
    ".claude/*",
    ".pre-commit-config.yaml",
    ".python-version",
    "CONTRIBUTING.md",
    "MANIFEST.in",
    "uv.lock",
    "xarray_sql/*_test.py",
]

[dependencies]
arrow = { version = "59.0.0", features = ["pyarrow"] }
async-stream = "0.3"
async-trait = "0.1"
datafusion = { version = "54.0.0" }
datafusion-ffi = { version = "54.0.0" }
datafusion-proto = { version = "54.0.0" }
datafusion-substrait = { version = "54.0.0" }
prost = "0.14"
futures = { version = "0.3" }
pyo3 = { version = "0.28.0", features = ["extension-module"] }
tokio = { version = "1.46.1", features = ["rt"] }


[build-dependencies]
pyo3-build-config = "0.28"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "xarray_sql"
crate-type = ["cdylib", "rlib"]

# The FFI simplify-forwarding change (issue #197) lives in the alxmrs/datafusion
# fork, pinned here as the third_party/datafusion submodule. Patch the whole
# datafusion family to it so a single source resolves consistently.
[patch.crates-io]
datafusion = { path = "third_party/datafusion/datafusion/core" }
datafusion-ffi = { path = "third_party/datafusion/datafusion/ffi" }
datafusion-proto = { path = "third_party/datafusion/datafusion/proto" }
datafusion-substrait = { path = "third_party/datafusion/datafusion/substrait" }
