[package]
name = "xarray_sql"
version = "0.3.1"
authors = ["Alex Merose"]
edition = "2021"
exclude = [
    "perf_tests/*",
    "demo/*",
    ".github/*",
    ".idea/*",
    ".claude/*",
    ".pre-commit-config.yaml",
    ".python-version",
    "CONTRIBUTING.md",
    "MANIFEST.in",
    "uv.lock",
    "xarray_sql/*_test.py",
]

[dependencies]
arrow = { version = "57.2.0", features = ["pyarrow"] }
async-stream = "0.3"
async-trait = "0.1"
datafusion = { version = "52.0.0" }
# Provides `snapshot_physical_expr`, used to resolve a join's dynamic filter to
# its current bounds for partition pruning. Pinned to the same 52.x line as
# datafusion so the PhysicalExpr ABI matches.
datafusion-physical-expr-common = { version = "52.0.0" }
datafusion-ffi = { version = "52.0.0" }
futures = { version = "0.3" }
# `abi3-py310` builds against CPython's stable ABI, so a single wheel per
# platform works on all CPython >= 3.10 (matching `requires-python`). This
# lets the release workflow ship pre-built wheels for every interpreter
# without compiling per-version, avoiding local rebuilds on install.
pyo3 = { version = "0.26.0", features = ["extension-module", "abi3-py310"] }
tokio = { version = "1.46.1", features = ["rt", "rt-multi-thread"] }


[build-dependencies]
pyo3-build-config = "0.26"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "xarray_sql"
crate-type = ["cdylib", "rlib"]
