[package]
name = "xarray_sql"
version = "0.3.1"
authors = ["Alex Merose"]
edition = "2021"
exclude = [
    "perf_tests/*",
    "demo/*",
    ".github/*",
    ".idea/*",
    ".claude/*",
    ".pre-commit-config.yaml",
    ".python-version",
    "CONTRIBUTING.md",
    "MANIFEST.in",
    "uv.lock",
    "xarray_sql/*_test.py",
]

[dependencies]
arrow = { version = "58", features = ["pyarrow"] }
async-stream = "0.3"
async-trait = "0.1"
datafusion = { version = "54.0.0" }
datafusion-ffi = { version = "54.0.0" }
futures = { version = "0.3" }
# `abi3-py310` builds against CPython's stable ABI, so a single wheel per
# platform works on all CPython >= 3.10 (matching `requires-python`). This
# lets the release workflow ship pre-built wheels for every interpreter
# without compiling per-version, avoiding local rebuilds on install.
pyo3 = { version = "0.28.0", features = ["extension-module", "abi3-py310"] }
tokio = { version = "1.46.1", features = ["rt"] }


[build-dependencies]
pyo3-build-config = "0.28"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "xarray_sql"
crate-type = ["cdylib", "rlib"]
