[build-system]
requires = ["maturin>=1.9,<2.0"]
build-backend = "maturin"

[project]
name = "xarray_sql"
dynamic = ["version"]
description = "Querry Xarray with SQL."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
authors = [
  {name = "Alexander Merose", email = "al@merose.com"},
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Rust",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Topic :: Scientific/Engineering :: Atmospheric Science",
  "Topic :: Database :: Front-Ends",
]
dependencies = [
    "dask>=2024.8.0",
    "datafusion==49.0.0",  # This needs to match the cargo datafusion version!!
    "xarray>=2024.7.0",
]

[project.optional-dependencies]
test = [
  "pytest",
  "xarray[io]",
  "gcsfs",
]

[project.urls]
Homepage = "https://github.com/alxmrs/xarray-sql"
Issues = "https://github.com/alxmrs/xarray-sql/issues"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "xarray_sql._native"

[tool.setuptools.packages.find]
exclude = ["demo", "perf_tests"]

[tool.pyink]
line-length = 80
preview = true
pyink-indentation = 2
pyink-use-majority-quotes = true

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
follow_imports = "skip"
exclude = [
    "perf_tests/",
    "xarray_sql.egg-info/",
    "^\\.venv/",
]

# Per-module ignores for libraries without type stubs
[[tool.mypy.overrides]]
module = [
    "pyarrow.*",
    "datafusion.*",
    "xarray.*",
]
ignore_missing_imports = true

[tool.setuptools_scm]

[dependency-groups]
dev = [
    "xarray_sql[test]",
    "py-spy>=0.4.0",
    "pyink>=24.10.1",
    "maturin>=1.9.1",
]
